--- a/public/locales/cn.json
+++ b/public/locales/cn.json
@@ -2,93 +2,11 @@
   "viewOnBscscan": "在BSCScan浏览器上查看",
   "viewOnHecoInfo": "在HecoInfo浏览器上查看",
   "MaticInfo": "在Matic浏览器上查看",
-  "recentTransactions": "最近交易",
-  "pleaseConnectWallet": "请连接您的钱包以查看您最近的交易",
-  "close": "关闭",
-  "noRecentTransactions": "最近没有交易",
-  "errorMessages": {
-    "transactionMayFail": "您的交易可能会失败",
-    "validDeadline": "输入有效的截止日期",
-    "tokenAlreadyAdded": "已添加带有此地址的代币",
-    "tokenNotWhitelisted": "警告此代币未被列入白名单\n通过自定义代币添加，您确认与所有进一步兑换都由您自己承担风险",
-    "routingThroughTokens": "通过这些代币选择路线会为您的交易带来最佳价格",
-    "importTokenWarning": "任何人都可以在BSC上以任何名称创建BEP20代币，包括创建现有代币的假版本和声称代表没有发币的项目的代币。该接口可以通过代币地址加载任意代币。在与任意BEP20代币交互时，请格外小心并进行研究",
-    "importTokenWarningPurchase": "如果您购买任意代币，",
-    "youMaybeUnable": "你可能不能卖"
-  },
-  "slippageTolerance": "滑动允许范围",
-  "questionHelperMessages": {
-    "transactionRevert": "如果价格的变化超过这个百分比，你的交易将会取消",
-    "transactionRevertPending": "如果交易处理超过这个时间，你的交易将会取消",
-    "findTokenBySearching": "通过搜索代币的名称或符号或在下面粘贴其地址来查找代币",
-    "addCustomToken": "添加自定义代币",
-    "transactionWillRevert": "如果在你的交易确认之前有大额交易，造成的价格变动，你的交易将会取消",
-    "differenceBetweenMarket": "市场价格和你的价格之间的差异是由交易规模决定的",
-    "feeTreasury": "每笔交易支付0.25%费用，0.20%给流动性提供者，0.05%给GravisSwap 国库",
-    "toolToFindPairs": "使用此工具查找不会自动出现在界面中的配对",
-    "addLiquidity": "当您增加流动性时，您将获得代表您头寸的池代币。这些代币会自动赚取与您的池份额成比例的费用，并且可以随时兑换",
-    "removeTokens": "移除池代币将您的头寸按当前利率转换回基础代币，与您在池中的份额成比例。应收手续费包含在您收到的金额中"
-  },
-  "transactionDeadline": "交易截止日期",
-  "minutes": "分",
-  "settings": "设置",
-  "hash": "哈希值",
-  "remove": "去除",
-  "addToMetamask": "添加到Metamask",
-  "selectToken": "选择一个代币",
-  "tokenSearchPlaceholder": "搜索名称或粘贴地址",
-  "tokenName": "代币名称",
-  "nothingFound": "没有找到",
-  "addToken": "添加代币",
-  "invalidTokenAddress": "不是有效的代币地址",
-  "addCustomToken": "添加自定义代币",
-  "tokenAddress": "代币地址",
-  "tokenSymbol": "代币符号",
-  "tokenDecimals": "代币小数点位",
-  "returnToSelectTokens": "返回选择代币",
-  "swappingFor": "交换{{ inputAmount }} 为 {{ outputAmount }}",
-  "confirmSwap": "确认兑换",
-  "price": "价格",
-  "minimumReceived": "最低接收",
-  "maximumSold": "最多卖",
-  "priceImpact": "价格影响",
-  "liquidityProviderFee": "流动性提供商费用",
-  "swapAnyway": "不考虑滑点，仍要兑换",
-  "priceUpdated": "价格更新",
-  "accept": "接受",
-  "outputEstimatedReceive": "估计你至少会收到",
-  "orTransactionWillRevert": "否则交易将会恢复",
-  "inputEstimatedReceive": "估计输入，你最多卖",
-  "outputWillBeSentTo": "输出将发送到",
-  "waitingConfirmation": "等待确认",
-  "confirmInWallet": "在您的钱包中确认此交易",
-  "error": "错误",
-  "dismiss": "解除",
-  "transactionSubmitted": "交易已提交",
-  "per": "每",
-  "shareOfPool": "池的份额",
-  "supplying": "供给",
-  "and": "和",
-  "creatingPool": "您正在创建一个池",
-  "youWillReceivePart": "你会收到",
-  "poolTokens": "池代币",
-  "outputEstimatedRevert": "如果价格变化超过，则估计产量",
-  "transactionWillRevert": " 您的交易将恢复",
-  "firstLiquidityProvider": "你是第一个流动性提供者",
-  "theRatio": "您添加的代币比例将决定该池的价格",
-  "onceYouHappy": "一旦您对价格满意，请点击“供应”查看",
-  "initialPricesAndPoolShare": "初始价格和池份额",
-  "pricesAndPoolShare": "价格和池份额",
-  "approving": "批准中",
-  "approve": "批准",
-  "supply": "供应",
-  "connectWallet": "连接钱包",
-  "enterAmount": "输入金额",
   "mainMenu": {
-    "migrate": "迁移",
+    "home": "主页",
     "trade": "兑换",
     "liquidity": "池",
-    "home": "主页",
+    "migrate": "迁移",
     "analytics": {
       "analytics": "分析学",
       "overview": "概要",
@@ -105,20 +23,114 @@
     "pitchDeck": "简报",
     "tokenomics": "代币经济学"
   },
-  "quantity": "数量",
-  "chooseToken": "请选择您的代币",
-  "inPool": "在游泳池",
-  "swap": "兑换",
-  "unlockWallet": "解锁钱包",
-  "balanceTitle": "余额",
-  "maxAmountLabel": "最大",
   "language": "cn",
+  "swap": "兑换",
   "presentationLink": "http://gateway.pinata.cloud/ipfs/QmS3gYhCphkyDN1GWg3TTqKFdJUCGXTKiGpi6BhSupjpJb/Gravis_presentation_JP.pdf",
   "connect": "连接",
   "account": "账户",
   "learnHowConnect": "学习如何连接",
   "logout": "登出",
   "copyAddress": "复制地址",
+  "recentTransactions": "最近交易",
+  "pleaseConnectWallet": "请连接您的钱包以查看您最近的交易",
+  "close": "关闭",
+  "noRecentTransactions": "最近没有交易",
+  "settings": "设置",
+  "errorMessages": {
+    "validDeadline": "输入有效的截止日期",
+    "transactionMayFail": "您的交易可能会失败",
+    "tokenAlreadyAdded": "已添加带有此地址的代币",
+    "tokenNotWhitelisted": "警告此代币未被列入白名单\n通过自定义代币添加，您确认与所有进一步兑换都由您自己承担风险",
+    "invalidPair": "无效对",
+    "insufficientBalance": "余额{{ balance }} 不足",
+    "routingThroughTokens": "通过这些代币选择路线会为您的交易带来最佳价格",
+    "importTokenWarning": "任何人都可以在BSC上以任何名称创建BEP20代币，包括创建现有代币的假版本和声称代表没有发币的项目的代币。该接口可以通过代币地址加载任意代币。在与任意BEP20代币交互时，请格外小心并进行研究",
+    "importTokenWarningPurchase": "如果您购买任意代币，",
+    "youMaybeUnable": "你可能不能卖",
+    "willNotSucceed": "由于价格变动或交易费，此交易不会成功。请尝试增加您的滑动",
+    "timeoutError": "交易无法成功。这可能是因为超出了滑点限制或交易超市。请重试或在“设置”菜单中更改这些设置",
+    "contactSupport": "意外错误。请在support联系。没有任何原因引发错误",
+    "transactionRejected": "交易被拒绝",
+    "swapFailed": "交换失败"
+  },
+  "transactionDeadline": "交易截止日期",
+  "questionHelperMessages": {
+    "transactionRevertPending": "如果交易处理超过这个时间，你的交易将会取消",
+    "transactionRevert": "如果价格的变化超过这个百分比，你的交易将会取消",
+    "findTokenBySearching": "通过搜索代币的名称或符号或在下面粘贴其地址来查找代币",
+    "addCustomToken": "添加自定义代币",
+    "transactionWillRevert": "如果在你的交易确认之前有大额交易，造成的价格变动，你的交易将会取消",
+    "differenceBetweenMarket": "市场价格和你的价格之间的差异是由交易规模决定的",
+    "feeTreasury": "每笔交易支付0.25%费用，0.20%给流动性提供者，0.05%给GravisSwap 国库",
+    "toolToFindPairs": "使用此工具查找不会自动出现在界面中的配对",
+    "addLiquidity": "当您增加流动性时，您将获得代表您头寸的池代币。这些代币会自动赚取与您的池份额成比例的费用，并且可以随时兑换",
+    "removeTokens": "移除池代币将您的头寸按当前利率转换回基础代币，与您在池中的份额成比例。应收手续费包含在您收到的金额中"
+  },
+  "minutes": "分",
+  "slippageTolerance": "滑动允许范围",
+  "remove": "去除",
+  "addToMetamask": "添加到Metamask",
+  "selectToken": "选择一个代币",
+  "tokenSearchPlaceholder": "搜索名称或粘贴地址",
+  "tokenName": "代币名称",
+  "nothingFound": "没有找到",
+  "addToken": "添加代币",
+  "hash": "哈希值",
+  "invalidTokenAddress": "不是有效的代币地址",
+  "addCustomToken": "添加自定义代币",
+  "tokenAddress": "代币地址",
+  "tokenSymbol": "代币符号",
+  "tokenDecimals": "代币小数点位",
+  "returnToSelectTokens": "返回选择代币",
+  "typeConfirm": "兑换价格影响最少为{{ percentage }}%，需要在对话框兑换输入“confirm”继续兑换",
+  "pleaseConfirm": "兑换价格影响最少为{{ percentage }}%，请确认你要继续兑换",
+  "swappingFor": "交换{{ inputAmount }} 为 {{ outputAmount }}",
+  "confirmSwap": "确认兑换",
+  "priceUpdated": "价格更新",
+  "accept": "接受",
+  "outputEstimatedReceive": "估计你至少会收到",
+  "orTransactionWillRevert": "否则交易将会恢复",
+  "inputEstimatedReceive": "估计输入，你最多卖",
+  "outputWillBeSentTo": "输出将发送到",
+  "price": "价格",
+  "minimumReceived": "最低接收",
+  "maximumSold": "最多卖",
+  "priceImpact": "价格影响",
+  "liquidityProviderFee": "流动性提供商费用",
+  "swapAnyway": "不考虑滑点，仍要兑换",
+  "waitingConfirmation": "等待确认",
+  "confirmInWallet": "在您的钱包中确认此交易",
+  "error": "错误",
+  "dismiss": "解除",
+  "transactionSubmitted": "交易已提交",
+  "supplying": "供给",
+  "and": "和",
+  "creatingPool": "您正在创建一个池",
+  "youWillReceivePart": "你会收到",
+  "poolTokens": "池代币",
+  "outputEstimatedRevert": "如果价格变化超过，则估计产量",
+  "transactionWillRevert": " 您的交易将恢复",
+  "firstLiquidityProvider": "你是第一个流动性提供者",
+  "theRatio": "您添加的代币比例将决定该池的价格",
+  "onceYouHappy": "一旦您对价格满意，请点击“供应”查看",
+  "initialPricesAndPoolShare": "初始价格和池份额",
+  "pricesAndPoolShare": "价格和池份额",
+  "approving": "批准中",
+  "approve": "批准",
+  "supply": "供应",
+  "per": "每",
+  "shareOfPool": "池的份额",
+  "connectWallet": "连接钱包",
+  "enterAmount": "输入金额",
+  "quantity": "数量",
+  "chooseToken": "请选择您的代币",
+  "inPool": "在游泳池",
+  "unlockWallet": "解锁钱包",
+  "balanceTitle": "余额",
+  "maxAmountLabel": "最大",
+  "importPool": "导入池",
+  "addLiquidity": "添加流动性",
+  "removeLiquidity": "移除流动性",
   "lpTokensInWallet": "钱包里的LP代币",
   "loading": "加载",
   "copyLPTokensAddress": "复制LP代币地址",
@@ -126,9 +138,6 @@
   "yourPoolTokens": "您的池代币",
   "yourPoolShare": "你的池份额",
   "add": "添加",
-  "importPool": "导入池",
-  "addLiquidity": "添加流动性",
-  "removeLiquidity": "移除流动性",
   "differenceBetweenMarket": "由于交易规模而导致的市场价格和估计价格之间的差异",
   "viewPairAnalytics": "查看交易对分析",
   "route": "路",
@@ -136,6 +145,9 @@
   "iUnderstand": "我理解",
   "continue": "继续",
   "unknownError": "出现未知错误。请刷新页面，或从其他浏览器或设备访问",
+  "wrap": "包",
+  "unwrap": "打开",
+  "to": "到",
   "pendingActionInWallet": "You have a pending action in the wallet.",
   "confirmNetworkChange": "Please, confirm network change",
   "comingSoon": "很快来。",
@@ -145,18 +157,6 @@
   "liquidityNotFound": "找不到{{text}}的流动性",
   "noJoinedPool": "找不到你要添加的流动池",
   "importPoolMessage": "导入",
-  "removing": "去除",
-  "youWillReceiveMessage": "接受中",
-  "outputEstimated": "估计输出，如果价格变化超过",
-  "burned": "烧毁",
-  "confirm": "确认",
-  "amount": "金额",
-  "simple": "简单",
-  "detailed": "细节",
-  "receive": "接受",
-  "from": "从",
-  "output": "输出",
-  "approved": "已批准",
   "connectToFindPools": "连接到钱包查找池",
   "selectToFindLiquidity": "选择一个代币来寻找你的流动性",
   "poolFound": "找到池",
@@ -166,12 +166,24 @@
   "invalidPair": "无效对",
   "swapHeaderDescription": "瞬间交易代币",
   "fromEstimated": "来自（估计）",
+  "from": "从",
   "toEstimated": "到（估计）",
   "upperTo": "到",
   "provideSecondToken": "提供第二个代币",
   "readingBlockchain": "阅读区块链",
   "insufficientLiquidityForThisTrade": "该交易的流动性不足",
+  "approved": "已批准",
   "priceImpactTooHigh": "价格影响过高",
+  "removing": "去除",
+  "youWillReceiveMessage": "接受中",
+  "outputEstimated": "估计输出，如果价格变化超过",
+  "burned": "烧毁",
+  "confirm": "确认",
+  "amount": "金额",
+  "simple": "简单",
+  "detailed": "细节",
+  "receive": "接受",
+  "output": "输出",
   "deposited": "存入",
   "rates": "比率",
   "createPoolAndSupply": "创建/添加池",
