--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -2,93 +2,11 @@
   "viewOnBscscan": "View on BSCScan",
   "viewOnHecoInfo": "View on HecoInfo",
   "MaticInfo": "View on Matic",
-  "recentTransactions": "Recent Transactions",
-  "pleaseConnectWallet": "Please connect your wallet to view your recent transactions",
-  "close": "Close",
-  "noRecentTransactions": "No recent transactions",
-  "errorMessages": {
-    "transactionMayFail": "Your transaction may fail",
-    "validDeadline": "Enter a valid deadline",
-    "tokenAlreadyAdded": "Token with this address already added",
-    "tokenNotWhitelisted": "Warning! This token is not whitelisted.\nBy adding it as a custom token, you confirm that all further interactions with it are at your own risk.",
-    "routingThroughTokens": "Routing through these tokens resulted in the best price for your trade.",
-    "importTokenWarning": "Anyone can create an BEP20 token on BSC with any name, including creating fake versions of existing tokens and tokens that claim to represent projects that do not have a token.\nThis interface can load arbitrary tokens by token addresses. Please take extra caution and do your research when interacting with arbitrary BEP20 tokens.",
-    "importTokenWarningPurchase": "If you purchase an arbitrary token, ",
-    "youMaybeUnable": "you may be unable to sell it back."
-  },
-  "slippageTolerance": "Slippage tolerance",
-  "questionHelperMessages": {
-    "transactionRevert": "Your transaction will revert if the price changes unfavorably by more than this percentage.",
-    "transactionRevertPending": "Your transaction will revert if it is pending for more than this long.",
-    "findTokenBySearching": "Find a token by searching for its name or symbol or by pasting its address below.",
-    "addCustomToken": "Add a custom token.",
-    "transactionWillRevert": "Your transaction will revert if there is a large, unfavorable price movement before it is confirmed.",
-    "differenceBetweenMarket": "The difference between the market price and your price due to trade size.",
-    "feeTreasury": "For each trade a 0.25% fee is paid. 0.20% goes to liquidity providers and 0.05% goes to the GravisSwap treasury.",
-    "toolToFindPairs": "Use this tool to find pairs that don't automatically appear in the interface",
-    "addLiquidity": "When you add liquidity, you are given pool tokens representing your position. These tokens automatically earn fees proportional to your share of the pool, and can be redeemed at any time.",
-    "removeTokens": "Removing pool tokens converts your position back into underlying tokens at the current rate, proportional to your share of the pool. Accrued fees are included in the amounts you receive."
-  },
-  "transactionDeadline": "Transaction deadline",
-  "minutes": "Minutes",
-  "settings": "Settings",
-  "hash": "Hash",
-  "remove": "Remove",
-  "addToMetamask": "Add to Metamask",
-  "selectToken": "Select a token",
-  "tokenSearchPlaceholder": "Search name or paste address",
-  "tokenName": "Token name",
-  "nothingFound": "Nothing Found",
-  "addToken": "Add Token",
-  "invalidTokenAddress": "Not a valid token address",
-  "addCustomToken": "Add Custom Token",
-  "tokenAddress": "Token Address",
-  "tokenSymbol": "Token Symbol",
-  "tokenDecimals": "Token Decimals",
-  "returnToSelectTokens": "Return to select tokens",
-  "swappingFor": "Swapping {{ inputAmount }} for {{ outputAmount }}",
-  "confirmSwap": "Confirm Swap",
-  "price": "Price",
-  "minimumReceived": "Minimum received",
-  "maximumSold": "Maximum sold",
-  "priceImpact": "Price Impact",
-  "liquidityProviderFee": "Liquidity Provider Fee",
-  "swapAnyway": "Swap Anyway",
-  "priceUpdated": "Price Updated",
-  "accept": "Accept",
-  "outputEstimatedReceive": "Output is estimated. You will receive at least",
-  "orTransactionWillRevert": "or the transaction will revert",
-  "inputEstimatedReceive": "Input is estimated. You will sell at most ",
-  "outputWillBeSentTo": "Output will be sent to",
-  "waitingConfirmation": "Waiting for confirmation",
-  "confirmInWallet": "Confirm this transaction in your wallet",
-  "error": "Error",
-  "dismiss": "Dismiss",
-  "transactionSubmitted": "Transaction submitted",
-  "per": "per",
-  "shareOfPool": "Share of Pool",
-  "supplying": "Supplying",
-  "and": "and",
-  "creatingPool": "You are creating a pool",
-  "youWillReceivePart": "You will receive",
-  "poolTokens": "Pool Tokens",
-  "outputEstimatedRevert": "Output is estimated. If the price changes by more than",
-  "transactionWillRevert": " your transaction will revert.",
-  "firstLiquidityProvider": "You are the first liquidity provider.",
-  "theRatio": "The ratio of tokens you add will set the price of this pool.",
-  "onceYouHappy": "Once you are happy with the rate click supply to review.",
-  "initialPricesAndPoolShare": "Initial prices and pool share",
-  "pricesAndPoolShare": "Price and pool share",
-  "approving": "Approving",
-  "approve": "Approve",
-  "supply": "Supply",
-  "connectWallet": "Connect Wallet",
-  "enterAmount": "Enter an amount",
   "mainMenu": {
-    "migrate": "Migrate",
+    "home": "Home",
     "trade": "Exchange",
     "liquidity": "Pool",
-    "home": "Home",
+    "migrate": "Migrate",
     "analytics": {
       "analytics": "Analytics",
       "overview": "Overview",
@@ -105,20 +23,114 @@
     "pitchDeck": "Pitch Deck",
     "tokenomics": "Tokenomics"
   },
-  "quantity": "Quantity",
-  "chooseToken": "Please, choose your token",
-  "inPool": "in pool",
-  "swap": "Swap",
-  "unlockWallet": "Unlock Wallet",
-  "balanceTitle": "Balance",
-  "maxAmountLabel": "MAX",
   "language": "en",
+  "swap": "Swap",
   "presentationLink": "https://gateway.pinata.cloud/ipfs/QmQyWnMBruL7n7vqyVYxNXQdpm5rffj9e1Wr2Q48LU9PvY/gravis_presentation.pdf",
   "connect": "Connect",
   "account": "Account",
   "learnHowConnect": "Learn how to connect",
   "logout": "Logout",
   "copyAddress": "Copy Address",
+  "recentTransactions": "Recent Transactions",
+  "pleaseConnectWallet": "Please connect your wallet to view your recent transactions",
+  "close": "Close",
+  "noRecentTransactions": "No recent transactions",
+  "settings": "Settings",
+  "errorMessages": {
+    "validDeadline": "Enter a valid deadline",
+    "transactionMayFail": "Your transaction may fail",
+    "tokenAlreadyAdded": "Token with this address already added",
+    "tokenNotWhitelisted": "Warning! This token is not whitelisted.\nBy adding it as a custom token, you confirm that all further interactions with it are at your own risk.",
+    "invalidPair": "Invalid pair",
+    "insufficientBalance": "Insufficient {{ balance }} balance",
+    "routingThroughTokens": "Routing through these tokens resulted in the best price for your trade.",
+    "importTokenWarning": "Anyone can create an BEP20 token on BSC with any name, including creating fake versions of existing tokens and tokens that claim to represent projects that do not have a token.\nThis interface can load arbitrary tokens by token addresses. Please take extra caution and do your research when interacting with arbitrary BEP20 tokens.",
+    "importTokenWarningPurchase": "If you purchase an arbitrary token, ",
+    "youMaybeUnable": "you may be unable to sell it back.",
+    "willNotSucceed": "This transaction will not succeed either due to price movement or fee on transfer. Try increasing your slippage tolerance.",
+    "timeoutError": "The transaction cannot succeed. This is probably caused by overrunning the slippage tolerance or expiring timeout.\n Please try again or change these settings in the Settings menu.",
+    "contactSupport": "Unexpected error. Please contact support: none of the calls threw an error",
+    "transactionRejected": "Transaction rejected.",
+    "swapFailed": "Swap failed"
+  },
+  "transactionDeadline": "Transaction deadline",
+  "questionHelperMessages": {
+    "transactionRevertPending": "Your transaction will revert if it is pending for more than this long.",
+    "transactionRevert": "Your transaction will revert if the price changes unfavorably by more than this percentage.",
+    "findTokenBySearching": "Find a token by searching for its name or symbol or by pasting its address below.",
+    "addCustomToken": "Add a custom token.",
+    "transactionWillRevert": "Your transaction will revert if there is a large, unfavorable price movement before it is confirmed.",
+    "differenceBetweenMarket": "The difference between the market price and your price due to trade size.",
+    "feeTreasury": "For each trade a 0.25% fee is paid. 0.20% goes to liquidity providers and 0.05% goes to the GravisSwap treasury.",
+    "toolToFindPairs": "Use this tool to find pairs that don't automatically appear in the interface",
+    "addLiquidity": "When you add liquidity, you are given pool tokens representing your position. These tokens automatically earn fees proportional to your share of the pool, and can be redeemed at any time.",
+    "removeTokens": "Removing pool tokens converts your position back into underlying tokens at the current rate, proportional to your share of the pool. Accrued fees are included in the amounts you receive."
+  },
+  "minutes": "Minutes",
+  "slippageTolerance": "Slippage tolerance",
+  "remove": "Remove",
+  "addToMetamask": "Add to Metamask",
+  "selectToken": "Select a token",
+  "tokenSearchPlaceholder": "Search name or paste address",
+  "tokenName": "Token name",
+  "nothingFound": "Nothing Found",
+  "addToken": "Add Token",
+  "hash": "Hash",
+  "invalidTokenAddress": "Not a valid token address",
+  "addCustomToken": "Add Custom Token",
+  "tokenAddress": "Token Address",
+  "tokenSymbol": "Token Symbol",
+  "tokenDecimals": "Token Decimals",
+  "returnToSelectTokens": "Return to select tokens",
+  "typeConfirm": "This swap has a price impact of at least {{ percentage }}%. Please type the word \"confirm\" to continue with this swap.",
+  "pleaseConfirm": "This swap has a price impact of at least {{ percentage }}%. Please confirm that you would like to continue with this swap.",
+  "swappingFor": "Swapping {{ inputAmount }} for {{ outputAmount }}",
+  "confirmSwap": "Confirm Swap",
+  "priceUpdated": "Price Updated",
+  "accept": "Accept",
+  "outputEstimatedReceive": "Output is estimated. You will receive at least",
+  "orTransactionWillRevert": "or the transaction will revert",
+  "inputEstimatedReceive": "Input is estimated. You will sell at most ",
+  "outputWillBeSentTo": "Output will be sent to",
+  "price": "Price",
+  "minimumReceived": "Minimum received",
+  "maximumSold": "Maximum sold",
+  "priceImpact": "Price Impact",
+  "liquidityProviderFee": "Liquidity Provider Fee",
+  "swapAnyway": "Swap Anyway",
+  "waitingConfirmation": "Waiting for confirmation",
+  "confirmInWallet": "Confirm this transaction in your wallet",
+  "error": "Error",
+  "dismiss": "Dismiss",
+  "transactionSubmitted": "Transaction submitted",
+  "supplying": "Supplying",
+  "and": "and",
+  "creatingPool": "You are creating a pool",
+  "youWillReceivePart": "You will receive",
+  "poolTokens": "Pool Tokens",
+  "outputEstimatedRevert": "Output is estimated. If the price changes by more than",
+  "transactionWillRevert": " your transaction will revert.",
+  "firstLiquidityProvider": "You are the first liquidity provider.",
+  "theRatio": "The ratio of tokens you add will set the price of this pool.",
+  "onceYouHappy": "Once you are happy with the rate click supply to review.",
+  "initialPricesAndPoolShare": "Initial prices and pool share",
+  "pricesAndPoolShare": "Price and pool share",
+  "approving": "Approving",
+  "approve": "Approve",
+  "supply": "Supply",
+  "per": "per",
+  "shareOfPool": "Share of Pool",
+  "connectWallet": "Connect Wallet",
+  "enterAmount": "Enter an amount",
+  "quantity": "Quantity",
+  "chooseToken": "Please, choose your token",
+  "inPool": "in pool",
+  "unlockWallet": "Unlock Wallet",
+  "balanceTitle": "Balance",
+  "maxAmountLabel": "MAX",
+  "importPool": "Import Pool",
+  "addLiquidity": "Add Liquidity",
+  "removeLiquidity": "Remove Liquidity",
   "lpTokensInWallet": "LP Tokens in your Wallet",
   "loading": "Loading",
   "copyLPTokensAddress": "Copy LP Token address",
@@ -126,9 +138,6 @@
   "yourPoolTokens": "Your pool tokens",
   "yourPoolShare": "Your pool share",
   "add": "Add",
-  "importPool": "Import Pool",
-  "addLiquidity": "Add Liquidity",
-  "removeLiquidity": "Remove Liquidity",
   "differenceBetweenMarket": "The difference between the market price and estimated price due to trade size.",
   "viewPairAnalytics": "View pair analytics",
   "route": "Route",
@@ -136,6 +145,9 @@
   "iUnderstand": "I understand",
   "continue": "Continue",
   "unknownError": "Oops! An unknown error occurred. Please refresh the page, or visit from another browser or device.",
+  "wrap": "Wrap",
+  "unwrap": "unwrap",
+  "to": "to",
   "pendingActionInWallet": "You have a pending action in the wallet.",
   "confirmNetworkChange": "Please, confirm network change",
   "comingSoon": "Coming soon",
@@ -145,18 +157,6 @@
   "liquidityNotFound": "No {{text}} liquidity found.",
   "noJoinedPool": "Don't see a pool you joined?",
   "importPoolMessage": "Import it.",
-  "removing": "Removing",
-  "youWillReceiveMessage": "YouWillReceive",
-  "outputEstimated": "Output is estimated. If the price changes by more than",
-  "burned": "Burned",
-  "confirm": "Confirm",
-  "amount": "Amount",
-  "simple": "Simple",
-  "detailed": "Detailed",
-  "receive": "Receive",
-  "from": "From",
-  "output": "Output",
-  "approved": "Approved",
   "connectToFindPools": "Connect to a wallet to find pools",
   "selectToFindLiquidity": "Select a token to find your liquidity.",
   "poolFound": "Pool Found!",
@@ -166,12 +166,24 @@
   "invalidPair": "Invalid pair.",
   "swapHeaderDescription": "Trade tokens in an instant",
   "fromEstimated": "From (estimated)",
+  "from": "From",
   "toEstimated": "To (estimated)",
   "upperTo": "To",
   "provideSecondToken": "Provide second token",
   "readingBlockchain": "Reading blockchain...",
   "insufficientLiquidityForThisTrade": "Insufficient liquidity for this trade.",
+  "approved": "Approved",
   "priceImpactTooHigh": "Price Impact Too High",
+  "removing": "Removing",
+  "youWillReceiveMessage": "YouWillReceive",
+  "outputEstimated": "Output is estimated. If the price changes by more than",
+  "burned": "Burned",
+  "confirm": "Confirm",
+  "amount": "Amount",
+  "simple": "Simple",
+  "detailed": "Detailed",
+  "receive": "Receive",
+  "output": "Output",
   "deposited": "Deposited",
   "rates": "Rates",
   "createPoolAndSupply": "Create Pool & Supply",
