--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -2,93 +2,11 @@
   "viewOnBscscan": "BSCScanで見る",
   "viewOnHecoInfo": "HecoInfoで見る",
   "MaticInfo": "Maticで見る",
-  "recentTransactions": "最近のトランザクション",
-  "pleaseConnectWallet": "最近の取引を表示するには、ウォレットを接続してください。",
-  "close": "閉じる",
-  "noRecentTransactions": "最近のトランザクションがありません",
-  "errorMessages": {
-    "transactionMayFail": "トランザクションが失敗する可能性があります。",
-    "validDeadline": "有効な期限を入力してください。",
-    "tokenAlreadyAdded": " このアドレスのトークンはすでに追加されています",
-    "tokenNotWhitelisted": "警告! このトークンはホワイトリストに登録されていません。\n \n カスタムトークンとして追加することで、それ以降のやり取りはすべて自己責任であると確認したことになります。",
-    "routingThroughTokens": "これらのトークンを経由した結果、取引に最適な価格が得られました。",
-    "importTokenWarning": " 既存のトークンの偽物や、本来トークンを持たないプロジェクトのトークンの作成を含め、誰でも任意の名前でBSC上にBEP20トークンを作成することができます。\n \n このインターフェースでは、トークン・アドレスによって任意のトークンを読み込むことができます。任意のBEP20トークンとやりとりする際には、十分に注意し、調査を行ってください。",
-    "importTokenWarningPurchase": "任意のトークンを購入した場合、",
-    "youMaybeUnable": "それを売り戻すことができない可能性があります。"
-  },
-  "slippageTolerance": "スリッページの許容範囲",
-  "questionHelperMessages": {
-    "transactionRevert": "価格がこの割合以上に不利に変動した場合、あなたのトランザクションは元に戻ります。",
-    "transactionRevertPending": "この期間を超えて保留された場合、トランザクションは元に戻ります。",
-    "findTokenBySearching": "トークンの名前やシンボルを検索するか、下の欄にアドレスを貼り付けてトークンを探してください。",
-    "addCustomToken": "カスタムトークンを追加する。",
-    "transactionWillRevert": "取引が確認される前に大きく不利な価格変動があった場合、トランザクションは元に戻ります。",
-    "differenceBetweenMarket": "取引量による市場価格とあなたの価格との差。",
-    "feeTreasury": "各取引に対して、0.25%の手数料が支払われます。0.20%は流動性提供者に、0.05%はGravisSwapトレジャリーに支払われます。",
-    "toolToFindPairs": "このツールを使って、インターフェースに自動的に表示されないペアを見つけてください。",
-    "addLiquidity": "流動性を追加すると、自分のポジションを表すプールトークンが与えられます。これらのトークンは、プールのシェアに比例した手数料を自動的に獲得し、いつでも換金することができます。",
-    "removeTokens": "プールトークンを取り除くと、あなたのポジションはプールのシェアに比例して、現在のレートで原資産のトークンに戻されます。未払いの手数料は、あなたが受け取る金額に含まれています。"
-  },
-  "transactionDeadline": "トランザクション期限",
-  "minutes": "分",
-  "settings": "設定",
-  "hash": "ハッシュ",
-  "remove": "取り除く",
-  "addToMetamask": "Metamaskに追加",
-  "selectToken": "トークン選択",
-  "tokenSearchPlaceholder": "名前を検索するかアドレスを貼り付け",
-  "tokenName": "トークン名",
-  "nothingFound": "何も見つかりません",
-  "addToken": "トークンの追加",
-  "invalidTokenAddress": "有効なトークンのアドレスではありません",
-  "addCustomToken": "カスタムトークンの追加",
-  "tokenAddress": "トークンアドレス",
-  "tokenSymbol": "トークンシンボル",
-  "tokenDecimals": "トークンの小数点以下",
-  "returnToSelectTokens": "トークンの選択に戻る",
-  "swappingFor": "{{ inputAmount }} と {{ outputAmount }} を交換します。",
-  "confirmSwap": "スワップの確認",
-  "price": "価格",
-  "minimumReceived": "最小受領額",
-  "maximumSold": "最大売却額",
-  "priceImpact": "価格への影響",
-  "liquidityProviderFee": "流動性プロバイダー料金",
-  "swapAnyway": "強制スワップ",
-  "priceUpdated": "価格が更新されました",
-  "accept": "受け入れる",
-  "outputEstimatedReceive": "出力値は推定です。最低でも次の値を受け取ります。",
-  "orTransactionWillRevert": "でなければ、このトランザクションは元に戻ります",
-  "inputEstimatedReceive": "入力値が推定されました。あなたは最大で～～～売却します。",
-  "outputWillBeSentTo": "出力値が～～～に送信されます。",
-  "waitingConfirmation": "確認を待っています",
-  "confirmInWallet": "あなたのウォレットでこのトランザクションを確認します",
-  "error": "エラー",
-  "dismiss": "解除",
-  "transactionSubmitted": "トランザクションが送信されました",
-  "per": "当たり",
-  "shareOfPool": "プールのシェア",
-  "supplying": "供給中",
-  "and": "と",
-  "creatingPool": "あなたはプールを作成しています。",
-  "youWillReceivePart": "受け取ります",
-  "poolTokens": "トークンをプールする",
-  "outputEstimatedRevert": "出力は推定値です。価格が以下のように変化した場合",
-  "transactionWillRevert": " あなたのトランザクションは復帰します。",
-  "firstLiquidityProvider": "あなたが最初の流動性提供者です。",
-  "theRatio": "あなたが追加したトークンの比率によって、このプールの価格が決まります。",
-  "onceYouHappy": "レートに問題がなければ、供給をクリックして確認します。",
-  "initialPricesAndPoolShare": "初期価格とプールシェア",
-  "pricesAndPoolShare": "価格とプールシェア",
-  "approving": "承認中",
-  "approve": "承認する",
-  "supply": "供給",
-  "connectWallet": "ウォレット接続",
-  "enterAmount": "量を入力してください",
   "mainMenu": {
-    "migrate": "移行",
+    "home": "ホーム",
     "trade": "交換",
     "liquidity": "プール",
-    "home": "ホーム",
+    "migrate": "移行",
     "analytics": {
       "analytics": "アナリティクス",
       "overview": "概要",
@@ -105,20 +23,114 @@
     "pitchDeck": "ピッチデッキ",
     "tokenomics": "トケノミクス"
   },
-  "quantity": "数量",
-  "chooseToken": "トークンを選択してください",
-  "inPool": "インプール",
-  "swap": "スワップ",
-  "unlockWallet": "ウォレットのロック解除",
-  "balanceTitle": "残高",
-  "maxAmountLabel": "最大",
   "language": "jp",
+  "swap": "スワップ",
   "presentationLink": "http://gateway.pinata.cloud/ipfs/QmS3gYhCphkyDN1GWg3TTqKFdJUCGXTKiGpi6BhSupjpJb/Gravis_presentation_JP.pdf",
   "connect": "接続する",
   "account": "アカウント",
   "learnHowConnect": "接続方法について学ぶ",
   "logout": "ログアウト",
   "copyAddress": "アドレスをコピー",
+  "recentTransactions": "最近のトランザクション",
+  "pleaseConnectWallet": "最近の取引を表示するには、ウォレットを接続してください。",
+  "close": "閉じる",
+  "noRecentTransactions": "最近のトランザクションがありません",
+  "settings": "設定",
+  "errorMessages": {
+    "validDeadline": "有効な期限を入力してください。",
+    "transactionMayFail": "トランザクションが失敗する可能性があります。",
+    "tokenAlreadyAdded": " このアドレスのトークンはすでに追加されています",
+    "tokenNotWhitelisted": "警告! このトークンはホワイトリストに登録されていません。\n \n カスタムトークンとして追加することで、それ以降のやり取りはすべて自己責任であると確認したことになります。",
+    "invalidPair": "無効なペア",
+    "insufficientBalance": "{{ balance }}残高不足",
+    "routingThroughTokens": "これらのトークンを経由した結果、取引に最適な価格が得られました。",
+    "importTokenWarning": " 既存のトークンの偽物や、本来トークンを持たないプロジェクトのトークンの作成を含め、誰でも任意の名前でBSC上にBEP20トークンを作成することができます。\n \n このインターフェースでは、トークン・アドレスによって任意のトークンを読み込むことができます。任意のBEP20トークンとやりとりする際には、十分に注意し、調査を行ってください。",
+    "importTokenWarningPurchase": "任意のトークンを購入した場合、",
+    "youMaybeUnable": "それを売り戻すことができない可能性があります。",
+    "willNotSucceed": " このトランザクションは、価格変動や送金手数料により成功しません。スリッページの許容量を増やしてみてください。",
+    "timeoutError": "トランザクションが通りませんでした。おそらく、スリッページの許容範囲を超えたか、期限切れのタイムアウトが原因です。\n 再度お試しいただくか、設定メニューでこれらの設定を変更してください。",
+    "contactSupport": "予期せぬエラーです。サポートにお問い合わせください：どのコールもエラーになりませんでした。",
+    "transactionRejected": "トランザクションが拒否されました。",
+    "swapFailed": "スワップ失敗"
+  },
+  "transactionDeadline": "トランザクション期限",
+  "questionHelperMessages": {
+    "transactionRevertPending": "この期間を超えて保留された場合、トランザクションは元に戻ります。",
+    "transactionRevert": "価格がこの割合以上に不利に変動した場合、あなたのトランザクションは元に戻ります。",
+    "findTokenBySearching": "トークンの名前やシンボルを検索するか、下の欄にアドレスを貼り付けてトークンを探してください。",
+    "addCustomToken": "カスタムトークンを追加する。",
+    "transactionWillRevert": "取引が確認される前に大きく不利な価格変動があった場合、トランザクションは元に戻ります。",
+    "differenceBetweenMarket": "取引量による市場価格とあなたの価格との差。",
+    "feeTreasury": "各取引に対して、0.25%の手数料が支払われます。0.20%は流動性提供者に、0.05%はGravisSwapトレジャリーに支払われます。",
+    "toolToFindPairs": "このツールを使って、インターフェースに自動的に表示されないペアを見つけてください。",
+    "addLiquidity": "流動性を追加すると、自分のポジションを表すプールトークンが与えられます。これらのトークンは、プールのシェアに比例した手数料を自動的に獲得し、いつでも換金することができます。",
+    "removeTokens": "プールトークンを取り除くと、あなたのポジションはプールのシェアに比例して、現在のレートで原資産のトークンに戻されます。未払いの手数料は、あなたが受け取る金額に含まれています。"
+  },
+  "minutes": "分",
+  "slippageTolerance": "スリッページの許容範囲",
+  "remove": "取り除く",
+  "addToMetamask": "Metamaskに追加",
+  "selectToken": "トークン選択",
+  "tokenSearchPlaceholder": "名前を検索するかアドレスを貼り付け",
+  "tokenName": "トークン名",
+  "nothingFound": "何も見つかりません",
+  "addToken": "トークンの追加",
+  "hash": "ハッシュ",
+  "invalidTokenAddress": "有効なトークンのアドレスではありません",
+  "addCustomToken": "カスタムトークンの追加",
+  "tokenAddress": "トークンアドレス",
+  "tokenSymbol": "トークンシンボル",
+  "tokenDecimals": "トークンの小数点以下",
+  "returnToSelectTokens": "トークンの選択に戻る",
+  "typeConfirm": "このスワップは、少なくとも {{ percentage }}% の価格への影響があります。このスワップを続行するには、「confirm」と入力してください。",
+  "pleaseConfirm": "このスワップは、少なくとも {{ percentage }}% の価格への影響があります。このスワップを続行する場合は、「confirm」と入力してください。",
+  "swappingFor": "{{ inputAmount }} と {{ outputAmount }} を交換します。",
+  "confirmSwap": "スワップの確認",
+  "priceUpdated": "価格が更新されました",
+  "accept": "受け入れる",
+  "outputEstimatedReceive": "出力値は推定です。最低でも次の値を受け取ります。",
+  "orTransactionWillRevert": "でなければ、このトランザクションは元に戻ります",
+  "inputEstimatedReceive": "入力値が推定されました。あなたは最大で～～～売却します。",
+  "outputWillBeSentTo": "出力値が～～～に送信されます。",
+  "price": "価格",
+  "minimumReceived": "最小受領額",
+  "maximumSold": "最大売却額",
+  "priceImpact": "価格への影響",
+  "liquidityProviderFee": "流動性プロバイダー料金",
+  "swapAnyway": "強制スワップ",
+  "waitingConfirmation": "確認を待っています",
+  "confirmInWallet": "あなたのウォレットでこのトランザクションを確認します",
+  "error": "エラー",
+  "dismiss": "解除",
+  "transactionSubmitted": "トランザクションが送信されました",
+  "supplying": "供給中",
+  "and": "と",
+  "creatingPool": "あなたはプールを作成しています。",
+  "youWillReceivePart": "受け取ります",
+  "poolTokens": "トークンをプールする",
+  "outputEstimatedRevert": "出力は推定値です。価格が以下のように変化した場合",
+  "transactionWillRevert": " あなたのトランザクションは復帰します。",
+  "firstLiquidityProvider": "あなたが最初の流動性提供者です。",
+  "theRatio": "あなたが追加したトークンの比率によって、このプールの価格が決まります。",
+  "onceYouHappy": "レートに問題がなければ、供給をクリックして確認します。",
+  "initialPricesAndPoolShare": "初期価格とプールシェア",
+  "pricesAndPoolShare": "価格とプールシェア",
+  "approving": "承認中",
+  "approve": "承認する",
+  "supply": "供給",
+  "per": "当たり",
+  "shareOfPool": "プールのシェア",
+  "connectWallet": "ウォレット接続",
+  "enterAmount": "量を入力してください",
+  "quantity": "数量",
+  "chooseToken": "トークンを選択してください",
+  "inPool": "インプール",
+  "unlockWallet": "ウォレットのロック解除",
+  "balanceTitle": "残高",
+  "maxAmountLabel": "最大",
+  "importPool": "インポートプール",
+  "addLiquidity": "流動性の追加",
+  "removeLiquidity": "流動性の除去",
   "lpTokensInWallet": "あなたのウォレットのLPトークン",
   "loading": "読み込み中",
   "copyLPTokensAddress": "LPトークンのアドレスをコピーする",
@@ -126,9 +138,6 @@
   "yourPoolTokens": "あなたのプールトークン",
   "yourPoolShare": "あなたのプールシェア",
   "add": "追加",
-  "importPool": "インポートプール",
-  "addLiquidity": "流動性の追加",
-  "removeLiquidity": "流動性の除去",
   "differenceBetweenMarket": "取引量による市場価格と推定価格の差。",
   "viewPairAnalytics": "ペアアナリティクスを見る",
   "route": "ルート",
@@ -136,6 +145,9 @@
   "iUnderstand": "わかりました",
   "continue": "続ける",
   "unknownError": "おや？不明なエラーが発生しました。ページを更新するか、別のブラウザまたはデバイスからアクセスしてください。",
+  "wrap": "ラップ",
+  "unwrap": "アンラップ",
+  "to": "に",
   "pendingActionInWallet": "You have a pending action in the wallet.",
   "confirmNetworkChange": "Please, confirm network change",
   "comingSoon": "ﾂづ慊つｷﾂ。",
@@ -145,18 +157,6 @@
   "liquidityNotFound": "{{text}}の流動性は見つかりませんでした。",
   "noJoinedPool": "参加したプールが見つかりませんか？",
   "importPoolMessage": "インポートする",
-  "removing": "除去",
-  "youWillReceiveMessage": "受領中",
-  "outputEstimated": "出力は推定値です。価格の変動が大きければ",
-  "burned": "焼却済",
-  "confirm": "確定",
-  "amount": "金額",
-  "simple": "シンプル",
-  "detailed": "詳細",
-  "receive": "受け取る",
-  "from": "から",
-  "output": "出力",
-  "approved": "承認済",
   "connectToFindPools": "ウォレットを接続してプールを探す",
   "selectToFindLiquidity": "トークンを選択して流動性を探す",
   "poolFound": "プールが見つかりました!",
@@ -166,12 +166,24 @@
   "invalidPair": "無効なペアです。",
   "swapHeaderDescription": "今すぐトークンを取引",
   "fromEstimated": "から （推定値)",
+  "from": "から",
   "toEstimated": "まで（推定値)",
   "upperTo": "へ",
   "provideSecondToken": "第二のトークンを提供",
   "readingBlockchain": "ブロックチェーンを読みこみ中...",
   "insufficientLiquidityForThisTrade": "この取引には十分な流動性がありません。",
+  "approved": "承認済",
   "priceImpactTooHigh": "価格への影響が多きすぎます",
+  "removing": "除去",
+  "youWillReceiveMessage": "受領中",
+  "outputEstimated": "出力は推定値です。価格の変動が大きければ",
+  "burned": "焼却済",
+  "confirm": "確定",
+  "amount": "金額",
+  "simple": "シンプル",
+  "detailed": "詳細",
+  "receive": "受け取る",
+  "output": "出力",
   "deposited": "預け済み",
   "rates": "レート",
   "createPoolAndSupply": "プールの作成と供給",
