Added Menu links

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -23,7 +23,10 @@
     "pitchDeck": "Pitch Deck",
     "tokenomics": "Tokenomics",
     "NFTFarming": "NFT Farming",
-    "nftmarket": "NFT Market"
+    "nftmarket": "NFT Market",
+    "asteroidMining": "(A)steroid Mining",
+    "captainsIno": "Captains INO",
+    "docs": "Docs"
   },
   "language": "en",
   "swap": "Swap",
