--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -30,7 +30,7 @@
     "asteroidMining": "(A)steroid Mining",
     "captainsIno": "Капитаны INO"
   },
-  "language": "en",
+  "language": "ru",
   "swap": "Обменять",
   "presentationLink": "https://gateway.pinata.cloud/ipfs/QmQyWnMBruL7n7vqyVYxNXQdpm5rffj9e1Wr2Q48LU9PvY/gravis_presentation.pdf",
   "connect": "Подключиться",
