Updated presentation links

--- a/public/locales/cn.json
+++ b/public/locales/cn.json
@@ -27,7 +27,7 @@
   },
   "language": "cn",
   "swap": "兑换",
-  "presentationLink": "http://gateway.pinata.cloud/ipfs/QmS3gYhCphkyDN1GWg3TTqKFdJUCGXTKiGpi6BhSupjpJb/Gravis_presentation_JP.pdf",
+  "presentationLink": "https://gateway.pinata.cloud/ipfs/QmPyzebkCrP7C8R2WhHxnWcoGXoAb6T1dREZHAZkzCUt7F",
   "connect": "连接",
   "account": "账户",
   "learnHowConnect": "学习如何连接",
