--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -30,7 +30,7 @@
   },
   "language": "en",
   "swap": "Swap",
-  "presentationLink": "https://gateway.pinata.cloud/ipfs/QmQyWnMBruL7n7vqyVYxNXQdpm5rffj9e1Wr2Q48LU9PvY/gravis_presentation.pdf",
+  "presentationLink": "https://gateway.pinata.cloud/ipfs/QmPyzebkCrP7C8R2WhHxnWcoGXoAb6T1dREZHAZkzCUt7F",
   "connect": "Connect",
   "account": "Account",
   "learnHowConnect": "Learn how to connect",
