--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -29,7 +29,7 @@
   },
   "language": "jp",
   "swap": "スワップ",
-  "presentationLink": "http://gateway.pinata.cloud/ipfs/QmS3gYhCphkyDN1GWg3TTqKFdJUCGXTKiGpi6BhSupjpJb/Gravis_presentation_JP.pdf",
+  "presentationLink": "https://gateway.pinata.cloud/ipfs/QmPyzebkCrP7C8R2WhHxnWcoGXoAb6T1dREZHAZkzCUt7F",
   "connect": "接続する",
   "account": "アカウント",
   "learnHowConnect": "接続方法について学ぶ",
