--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -32,7 +32,7 @@
   },
   "language": "ru",
   "swap": "Обменять",
-  "presentationLink": "https://gateway.pinata.cloud/ipfs/QmQyWnMBruL7n7vqyVYxNXQdpm5rffj9e1Wr2Q48LU9PvY/gravis_presentation.pdf",
+  "presentationLink": "https://gateway.pinata.cloud/ipfs/QmPyzebkCrP7C8R2WhHxnWcoGXoAb6T1dREZHAZkzCUt7F",
   "connect": "Подключиться",
   "account": "Аккаунт",
   "learnHowConnect": "Изучите как подключиться",
